tests/smt2/error/sort_mismatch1.smt2
(declare-sort S1)
(declare-fun f (S1) Bool)
(assert (f true))